# cystar

./: .gitignore  README.md  docker-compose.yml  setup-git.ps1
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  credentials.py  verify.py
backend/app/core/: config.py  crypto.py  issuer.py  security.py
backend/app/db/: models.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/schemas/: auth.py  credentials.py
backend/app/services/: credential_service.py
backend/tests/: conftest.py  test_api.py  test_crypto.py
docs/: api.md  architecture.md  crypto-design.md  deployment.md
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/credentials/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/issue/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/verify/[token]/: page.tsx
frontend/src/components/features/: face-auth-dialog.tsx  share-dialog.tsx  topbar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
